<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selected"
        android:title="@string/bottom_navigation_home" />

    <item
        android:id="@+id/navigation_trip"
        android:icon="@drawable/trip_selected"
        android:title="@string/bottom_navigation_map" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_selected"
        android:title="@string/bottom_navigation_profile" />


</menu>